final fix: strictly Raleway and layout alignment

--- a/styles/style.css
+++ b/styles/style.css
@@ -7,22 +7,12 @@
 body {
   width: 1100px;
   margin: 0 auto;
-  font-family: 'Raleway', sans-serif;
+  font-family: 'Raleway'; /* Только Raleway, без запасных вариантов */
   background-color: #fff;
   color: #000;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-ul,
-ol,
-li,
-blockquote {
+h1, h2, h3, h4, h5, h6, p, ul, ol, li, blockquote {
   margin: 0;
   padding: 0;
 }
@@ -100,17 +90,11 @@ img {
   z-index: 1;
 }
 
-.aligned-text {
-  display: block;
-}
-
 .aligned-text_center {
-  display: block;
   text-align: center;
 }
 
 .aligned-text_right {
-  display: block;
   text-align: right;
 }
 
@@ -134,7 +118,7 @@ img {
   border: 1px solid #fff;
   color: #fff;
   padding: 12px 31px;
-  font-family: inherit;
+  font-family: 'Raleway';
   font-size: 22px;
   cursor: pointer;
   text-transform: uppercase;
@@ -159,14 +143,8 @@ img {
 }
 
 .lots__card-list-item {
-  flex-basis: 334px;
+  width: 334px;
   min-height: 450px;
-}
-
-.card-link {
-  display: block;
-  height: 100%;
-  text-decoration: none;
 }
 
 .card {
@@ -181,7 +159,6 @@ img {
   color: #fff;
 }
 
-/* ТЕ САМЫЕ СТРОЧКИ, КОТОРЫЕ Я ИСПРАВИЛ */
 .card_type_film {
   background-image: url(../images/card-lot-01.jpg);
 }
